--- a/Dyn/Dyn.vcxproj
+++ b/Dyn/Dyn.vcxproj
@@ -19,10 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\SatelliteMath\BaseMath.cpp" />
     <ClCompile Include="src\Astro\Attitude.cpp" />
     <ClCompile Include="src\Astro\Environment.cpp" />
     <ClCompile Include="src\Astro\Orbit.cpp" />
-    <ClCompile Include="src\General\SatTime.cpp" />
+    <ClCompile Include="src\General\SimTime.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\SatelliteMath\Dcm.cpp" />
     <ClCompile Include="src\SatelliteMath\Quaternions.cpp" />
@@ -33,7 +34,8 @@
     <ClInclude Include="include\Astro\Attitude.h" />
     <ClInclude Include="include\Astro\Environment.h" />
     <ClInclude Include="include\Astro\Orbit.h" />
-    <ClInclude Include="include\General\SatTime.h" />
+    <ClInclude Include="include\General\SimTime.h" />
+    <ClInclude Include="include\SatelliteMath\BaseMath.h" />
     <ClInclude Include="include\Satellite\Gyro.h" />
     <ClInclude Include="include\Satellite\Satellite.h" />
     <ClInclude Include="include\SatelliteMath\Dcm.h" />
@@ -98,6 +100,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
