--- a/Dyn/Dyn.vcxproj.filters
+++ b/Dyn/Dyn.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="src\SatelliteMath\EulerAgl.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\Astro\AttitudeControl.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\SatelliteMath\Quaternions.h">
@@ -78,6 +81,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\SatelliteMath\EulerAgl.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Astro\AttitudeControl.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
