更改了代码架构，实现了姿态控制任务

--- a/Dyn/Dyn.vcxproj
+++ b/Dyn/Dyn.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Componet\Componet.cpp" />
+    <ClCompile Include="src\Componet\Flywheel.cpp" />
     <ClCompile Include="src\General\CConfig.cpp" />
     <ClCompile Include="src\Astro\AttitudeControl.cpp" />
     <ClCompile Include="src\SatelliteMath\EulerAgl.cpp" />
@@ -32,13 +33,15 @@
     <ClCompile Include="src\SatelliteMath\Dcm.cpp" />
     <ClCompile Include="src\SatelliteMath\Quaternions.cpp" />
     <ClCompile Include="src\Componet\Gyro.cpp" />
-    <ClCompile Include="src\Satellite\MagSensor.cpp" />
+    <ClCompile Include="src\Componet\MagSensor.cpp" />
     <ClCompile Include="src\Satellite\Satellite.cpp" />
-    <ClCompile Include="src\Satellite\StarSensor.cpp" />
-    <ClCompile Include="src\Satellite\SunSensor.cpp" />
+    <ClCompile Include="src\Componet\StarSensor.cpp" />
+    <ClCompile Include="src\Componet\SunSensor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Componet\Componet.h" />
+    <ClInclude Include="include\Componet\Flywheel.h" />
+    <ClInclude Include="include\Componet\MagSensor.h" />
     <ClInclude Include="include\General\AllHead.h" />
     <ClInclude Include="include\General\CConfig.h" />
     <ClInclude Include="include\Astro\AttitudeControl.h" />
@@ -52,8 +55,8 @@
     <ClInclude Include="include\Satellite\Satellite.h" />
     <ClInclude Include="include\SatelliteMath\Dcm.h" />
     <ClInclude Include="include\SatelliteMath\Quaternions.h" />
-    <ClInclude Include="include\Satellite\StarSensor.h" />
-    <ClInclude Include="include\Satellite\SunSensor.h" />
+    <ClInclude Include="include\Componet\StarSensor.h" />
+    <ClInclude Include="include\Componet\SunSensor.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
