添加了GNSS单机模型，更新了数据库对照表，修改了姿态控制器模块，现在只需要单机信息

--- a/Dyn/Dyn.vcxproj
+++ b/Dyn/Dyn.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Componet\GNSS.cpp" />
     <ClCompile Include="src\Componet\Componet.cpp" />
     <ClCompile Include="src\Componet\Flywheel.cpp" />
     <ClCompile Include="src\General\CConfig.cpp" />
@@ -40,6 +41,7 @@
     <ClCompile Include="src\Componet\SunSensor.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Componet\GNSS.h" />
     <ClInclude Include="include\Componet\Componet.h" />
     <ClInclude Include="include\Componet\Flywheel.h" />
     <ClInclude Include="include\Componet\MagSensor.h" />
