--- a/Dyn/Dyn.vcxproj.filters
+++ b/Dyn/Dyn.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="src\General\InfluxDB.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\Componet\GNSS.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\SatelliteMath\Quaternions.h">
@@ -129,6 +132,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\General\InfluxDB.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Componet\GNSS.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
